--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
     "react-scroll": "^1.9.3"
   },
