--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.4",
     "vite": "^6.3.1"
   }
